--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
   <nav>
     <div class="logo">
-      <a  href="index.html">Snapshot</a>
+      <h4><a href="index.html">Snapshot</a></h4>
     </div>
     <div class="hamburger">
       <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle"/>
       <div class="nav-links">
-        <a class="current"href="index.html">Home</a>
-        <a href="services.html">Services</a>
+        <a href="index.html">Home</a>
+        <a class="current" href="services.html">Services</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
