--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle"/>
       <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a class="current" href="services.html">Services</a>
+        <a class="current" href="index.html">Home</a>
+        <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
       </div>
     </div>
