--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="footer-container">
 
       <div class="footer-left">
-        <img src="images/logo.png" class="logo-footer">
+        <img src="images/logo.png" class="logo-footer" alt="logo">
         <div class="social-media">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
