--- a/services.html
+++ b/services.html
@@ -56,24 +56,24 @@
 
 <div class="row">
   <div class="column">
-    <img src="./filters1/filter 1.png">
-    <img src="./filters1/filter 2.png">
-    <img src="./filters2/filter 9.png">
-    <img src="./filters2/filter 11.png">
+    <img src="./filters1/filter 1.png" alt="Rose">
+    <img src="./filters1/filter 2.png" alt="Dog">
+    <img src="./filters2/filter 9.png" alt="Beach">
+    <img src="./filters2/filter 11.png" alt="Turtle">
   </div>
   <div class="column">
-    <img src="./filters1/filter 3.png">
-    <img src="./filters1/filter 4.png">
-    <img src="./filters2/filter 10.png">
+    <img src="./filters1/filter 3.png" alt="Carnival">
+    <img src="./filters1/filter 4.png" alt="Forest">
+    <img src="./filters2/filter 10.png" alt="Sky">
   </div>
   <div class="column">
-    <img src="./filters1/filter 5.png">
-    <img src="./filters1/filter 6.png">
-    <img src="./filters2/filter 12.png">
+    <img src="./filters1/filter 5.png" alt="Galaxy">
+    <img src="./filters1/filter 6.png" alt="New York>
+    <img src="./filters2/filter 12.png" alt="Chocolate">
   </div>
   <div class="column">
-    <img src="./filters2/filter 7.png">
-    <img src="./filters2/filter 8.png" class="ice-cream">
+    <img src="./filters2/filter 7.png" alt="Water">
+    <img src="./filters2/filter 8.png" class="ice-cream" alt="Ice Cream">
   </div>
 </div>
   
@@ -83,7 +83,7 @@
     <div class="footer-container">
 
       <div class="footer-left">
-        <img src="images/logo.png" class="logo-footer">
+        <img src="images/logo.png" class="logo-footer" alt="logo">
         <div class="social-media">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
