--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
   </div>
   <div class="column">
     <img src="./filters1/filter 5.png" alt="Galaxy">
-    <img src="./filters1/filter 6.png" alt="New York>
+    <img src="./filters1/filter 6.png" alt="New York">
     <img src="./filters2/filter 12.png" alt="Chocolate">
   </div>
   <div class="column">
